infrastructure/kubernetes/overlays/staging/patches/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgv-staging
  labels:
    name: kgv-staging
    environment: staging
